--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     margin: 0;
     box-sizing: border-box;
 }
-body {
+html {
     font-family: 'Poppins', sans-serif;
     background-image: linear-gradient(90deg, #0AB6F8, #ED2D53);
 }
@@ -59,6 +59,7 @@ header {
     color: #ED2D53;
     width: 8rem;
     cursor: pointer;
+    display: inline-block;
 }
 .select::after {
     content: "\25BC";
@@ -115,4 +116,13 @@ header {
 .completed {
     opacity: .5;
     text-decoration: line-through;
+}
+
+@media screen and (max-width: 768px) {
+    html {
+        background-image: linear-gradient(90deg, #579ab4, #b68a93);
+    }
+    .todo-add .fas {
+        padding: 5px 15px;
+    }
 }
